--- a/MyPersonalBlog/css/style.css
+++ b/MyPersonalBlog/css/style.css
@@ -4,7 +4,7 @@
     grid-template-columns:1fr;
     grid-template-rows:50px 700px 25px;
     border:2px solid greenyellow;
-      /* Use grid-template-area to create a mobile layout where each named space occupies its own row */
+      /* grid-template-area for mobile layout */
     grid-template-areas:
     "hd"
     "sd"
